...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp" />

        <!-- Clear Cache and History Button -->
        <Button
            android:id="@+id/buttonClearCacheHistory"
            android:text="@string/clear_cache_and_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />
...
